--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
     float:left; 
 } 
 fieldset { 
-    border:1px solid #474747; 
+    border:2px solid rgb(20, 32, 73);
     border-radius:5px; 
     -webkit-border-radius:5px; 
     margin-bottom:10px; 
 } 
 legend { 
-    background:#474747; 
-    color:#fff; 
+    background:rgb(20, 32, 73); 
+    color:rgb(223, 77, 10); 
     padding:3px 15px; 
     border-radius:5px; 
     -webkit-border-radius:5px; 
@@ -72,11 +72,27 @@ button:hover {
 }
 .center {
     text-align: center;
-    background-color:lightblue;
+    color: white;
+    background-color:rgb(20, 32, 73);
   }
 
   .center2 {
     text-align: center;
-    border: 1px solid blue;
-    background-color:lightblue;
+    color: white;
+    background-color:rgb(20, 32, 73);
+  }
+  .center3 {
+    text-align: center;
+    background-color:rgb(249, 247, 252);
+  }
+
+input,
+label {
+    margin: .4rem 0;
+}
+footer {
+    text-align: center;
+    
+    background-color: rgb(20, 32, 73);
+    color: white;
   }
